# WebServer

./: CMakeLists.txt  Makefile  README.md  client  server
src/: client.cpp  http_server.cpp  server.cpp  test_threadpool.cpp
src/http/: HttpParase.cpp  HttpParase.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  HttpServer.cpp  HttpServer.h
src/retrieval/: Search.cpp  Search.h
src/tcp/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  InetAddress.h  Server.cpp  Server.h  Socket.cpp  Socket.h  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  ThreadPool.h
src/test/: client.cpp  client_api.html  http_server.cpp  test_threadpool.cpp
src/timer/: TimeStamp.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
src/utils/: build_database.py  get_text_embedding.py
